Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10769

Progressive download is not supported

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 4.6.2
    • (Inactive) mmfphonon
    • S60 - Nokia 5800
    • fcf4b59, bb994a5, d1b6c5d, 71af72b

    Description

      When using the qmediaplayer to stream a file from a http address it will not play and instead fails with "Buffering clip failed: not supported" although it works fine in Realplayer. This worked fine on the Desktop platforms.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gastockw Gareth Stockwell
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes